# TaskRaider

./: .gitignore  .gitmodules  CMakeLists.txt  MinED  data.toml  sample.toml  tTaskRaider
src/: Globals.cpp  Globals.hpp  main.cpp
src/GUI/: Builder.hpp  CreateContext.cpp  CreateContext.hpp  Director.cpp  Director.hpp  EditContext.cpp  EditContext.hpp  Event.hpp  GUI.cpp  GUI.hpp  IContext.hpp  LabelBuilder.cpp  PreviewContext.cpp  PreviewContext.hpp  ResourceManager.cpp  ResourceManager.hpp  StartContext.cpp  StartContext.hpp  main.cpp
src/MinED/: MinED.cpp
src/TUI/: Context.cpp  Context.cpp.orig  Context.hpp  Globals.cpp  Globals.hpp  TUI.cpp  TUI.hpp  TaskView.cpp  TaskView.hpp  Util.cpp  Util.hpp
src/TUI_MAIN/: Globals.cpp  main.cpp
src/TaskDB/: Task.cpp  Task.hpp  TaskDB.cpp  TaskDB.hpp
